              Always broken.

              xpmtoppm: Make it work on XPM with zero characters per pixel.

              Windows/Mingw: fix bug: temporary file creation fails
              consistently.  Broken in 10.34.

              Windows/Mingw: set binary mode on files.

              Windows: compute program name correctly.

              Build: use Pkgconfig to find libxml2 if it works (fall back
              to xml2-config).

11.12.30 BJH  Release 10.57.00

              pnmnorm: add -midvalue, -middle .

              pngtopam: fix crash with invalid tIME chunk.  Always broken.

              pamarith: fix wrong result with -multiply.  Broken in 10.41.

              pamscale: fix all black output with resampling.  Always broken.

              Build: don't use <alloca.h>.

11.09.28 BJH  Release 10.56.00

              Add pamexec.  Thanks Michael Pot <fmw@actrix.co.nz>.

              pbmclean: add -extended.  Idea from kugland@gmail.com.

              rasttopnm: add -index.

              pamcomp: Retain opacity information from underlying image.

              pnmtops: Add PBM fast path.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              libnetpbm and most programs that use color maps: speedup with
              new color hash function.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pnmquant: use File::Temp::tempfile() instead of local
              approximation if it is available.

              pnmquant: work with older Perl that doesn't have 3-argument open.
              Thanks Slaven Rezic <srezic@iconmobile.com>.

              pamscale: Issue error message instead of ignoring extraneous
              arguments.

              libnetpbm, many programs: fix bug in pm_allocarray(): returns
              NULL when can't get memory.  Calling programs thus crash on
              very large images.  Introduced in 10.51.
              